@@ -1,3 +1,5 @@
+HEAD
+	+ Avoid errors on reload of renew and revoke forms
 3.5.1
 	+ Download files as zip archive
 3.5
